Project Phase 3 fixed checkstyle issues

--- a/data/journalapp.json
+++ b/data/journalapp.json
@@ -1,35 +1,35 @@
 {
-    "journalName": " asdf",
+    "journalName": " mnmn",
     "logs": [
         {
             "logTitle": "asdf",
-            "logDate": "sadf",
+            "logDate": "asdf",
             "logEntry": "asdf"
         },
         {
-            "logTitle": " adsf",
-            "logDate": " sdaf",
-            "logEntry": " asdf"
+            "logTitle": " fdas",
+            "logDate": " fdas",
+            "logEntry": " fdas"
         },
         {
-            "logTitle": " asdf",
-            "logDate": " asdf",
-            "logEntry": " adsf"
+            "logTitle": " lkj;",
+            "logDate": " i;lj",
+            "logEntry": " l;kj"
         },
         {
-            "logTitle": " asdf",
-            "logDate": " sdaf",
-            "logEntry": " asdf"
+            "logTitle": " owiqpur",
+            "logDate": " qwerpiou",
+            "logEntry": " qwer"
         },
         {
-            "logTitle": " asdf",
-            "logDate": " asdf",
-            "logEntry": " asdf"
+            "logTitle": " zxv",
+            "logDate": " zxcv",
+            "logEntry": " zxcv"
         },
         {
-            "logTitle": " asdf",
-            "logDate": " asdf",
-            "logEntry": " asdf"
+            "logTitle": " mnmn",
+            "logDate": " nmmn",
+            "logEntry": " ,mmn"
         }
     ]
 }
